Prevent flicker with stable scrollbar

--- a/moonbunny/moonbunny.scss
+++ b/moonbunny/moonbunny.scss
@@ -52,6 +52,7 @@ Home {
 
     #body {
         height: 1fr;
+        scrollbar-gutter: stable;
     }
 
     DiffPanel {
